--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 
 
 .form-container {
-  width: 100%;
+  width: 300px;
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -23,11 +23,12 @@ form input {
   display: block;
   margin-bottom: 10px;
   padding: 8px;
+  width:85%;
 }
 
 form button {
   display: block;
-  width: 100%;
+  width: 30%;
   padding: 10px;
   background: #4c56af;
   color: #fff;
@@ -42,7 +43,7 @@ form h2 {
 }
 
 .test{
-  width:100%;
+  width:50%;
   display: flex;
   justify-content: flex-start;
   align-items: center;
